ubiquity (1.1.3) UNRELEASED; urgency=low

  * Fix typoed variable name while raising InstallStepError.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 19 Jul 2006 08:23:23 +0100

ubiquity (1.1.2) edgy; urgency=low

  * Automatic update of included source packages: apt-setup 1:0.11ubuntu2,
    hw-detect 1.38ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 19 Jul 2006 08:00:00 +0100

ubiquity (1.1.1) edgy; urgency=low

  * Use 'replace' Unicode error handling when dealing with data coming from
    debconf (closes: Malone #44595, #48732).
  * Fix ubiquity/install/apt_error_install and
    ubiquity/install/apt_error_remove templates to be of type 'error'
    (closes: Malone #53258).
  * Install more defence against gparted/qtparted crashing (closes: Malone
    #47194, #48856).
  * If gparted or qtparted crashes, put up a dialog allowing the user to try
    again, return to autopartitioning, or quit the installer. This is a
    pretty awful hack, but hopefully we won't be using gparted/qtparted for
    all that much longer ...
  * Fix crash in KDE frontend while translating widgets (closes: Malone
    #53367).

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 18 Jul 2006 22:09:21 +0100

ubiquity (1.1.0) edgy; urgency=low

  * Use try/finally in install.py to ensure that PROGRESS STOP is always
    called; ignore errors from PROGRESS STOP (e.g. because debconf has gone
    away due to a previous error).
  * Support /UNIONFS (Knoppix) as well as /rofs as the read-only filesystem
    source.
  * Don't require entering a full name (see
    http://www.hermann-uwe.de/blog/os-install-experiences-part-4-ubuntu).
  * GTK frontend:
    - Return None from location_from_point if point is None (thanks to Chris
      Moore for the idea; closes: Malone #48885).
  * KDE frontend:
    - Add slightly more paranoia in case getNearestCity returns None.
  * Don't show hw-detect/modprobe_error, and make it non-fatal (closes:
    Malone #48524).