@@ -58,7 +58,7 @@ d-i/source/partconf/debian/partconf-*/* .
 
 # partman
 d-i/source/partman-*/debian/partman-*/* .
-ubiquity/components/partman.py usr/lib/ubiquity/ubiquity/components
+ubiquity/components/partman_auto.py usr/lib/ubiquity/ubiquity/components
 ubiquity/components/partman_commit.py usr/lib/ubiquity/ubiquity/components
 
 # tzsetup
