@@ -1,6 +1,9 @@
 ubiquity (1.1.3) UNRELEASED; urgency=low
 
   * Fix typoed variable name while raising InstallStepError.
+  * Rename Partman component to PartmanAuto to allow for a future all-in-one
+    partman component
+    (https://launchpad.net/distros/ubuntu/+spec/ubiquity-advanced-partitioner).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Wed, 19 Jul 2006 08:23:23 +0100
 
